@@ -1,3 +1,11 @@
+2002-12-30  Jody Goldberg <jody@gnome.org>
+
+	Apply
+	http://bugzilla.gnome.org/show_bug.cgi?id=101752
+
+	* gnome-theme-details.c : Merge in Frederic's patch.
+	* gnome-theme-details.c : ditto.
+
 2002-12-28  Seth Nickell  <snickell@stanford.edu>
 
 	* gnome-theme-details.c: (path_to_theme_id), (load_theme_names),
