@@ -1,3 +1,7 @@
+2002-12-30  Jody Goldberg <jody@gnome.org>
+
+	* README : http://bugzilla.gnome.org/show_bug.cgi?id=100916
+
 2002-12-18  Jody Goldberg <jody@gnome.org>
 
 	* configure.in : post release version bump
